--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/nLiveoDrawer" >
         <activity
-            android:name=".MainActivity"
+            android:name=".interfaces.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,20 +17,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name=".interfaces.SettingsActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".interfaces.LoginActivity"
             android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name=".EmVistoriaActivity"
-            android:label="@string/title_activity_em_vistoria" >
-        </activity>
-        <activity
-            android:name=".LicVencidasActivity"
-            android:label="@string/title_activity_lic_vencidas" >
         </activity>
     </application>
 
