--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/nLiveoDrawer" >
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         <activity
             android:name=".interfaces.MainActivity"
             android:label="@string/app_name" >
