--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:theme="@style/nLiveoDrawer" >
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
         <activity
-            android:name=".interfaces.MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,12 +19,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".interfaces.SettingsActivity"
+            android:name=".activity.SettingsActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".interfaces.LoginActivity"
+            android:name=".activity.LoginActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activity.CadastroEstabelecimento"
+            android:label="@string/title_activity_cadastro_estabelecimento" >
         </activity>
     </application>
 
