--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.j256.ormlite:ormlite-android:4.48'
 
-
-    compile 'com.j256.ormlite:ormlite-core:4.23'
     compile 'com.github.gabrielemariotti.cards:library:1.9.1'
     compile 'br.com.liveo:navigationdrawer-material:2.3.2'
+
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'com.j256.ormlite:ormlite-core:4.23'
+
+    compile 'com.mcxiaoke.volley:library:1.0.+'
+
+
 }
