--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
 
 
+    compile 'com.shamanland:fab:0.0.8'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
+
 }
