--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
             android:name=".activity.EstabelecimentoDetalhesActivity"
             android:label="@string/title_activity_estabelecimento_detalhes" >
         </activity>
+        <activity
+            android:name=".activity.VistoriaActivity"
+            android:label="@string/title_activity_vistoria" >
+        </activity>
     </application>
 
 </manifest>
