--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,20 +15,21 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".activity.SobreActivity"
             android:label="@string/app_name"
             android:theme="@style/nLiveoDrawer"/>
         <activity
-            android:name=".activity.LoginActivity"
+            android:name=".activity.publico.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/nLiveoDrawer"/>
+            android:theme="@style/nLiveoDrawer">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activity.DetalhesTecnicoActivity"
             android:label="@string/title_activity_detalhe" >
