--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,11 @@
         <activity
             android:name=".activity.SobreActivity"
             android:label="@string/app_name"
-            android:theme="@style/nLiveoDrawer"/>
+            android:theme="@style/nLiveoDrawer" />
         <activity
             android:name=".activity.publico.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/nLiveoDrawer">
+            android:theme="@style/nLiveoDrawer" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,12 +37,14 @@
         <activity
             android:name=".activity.DetalhesVistoriaActivity"
             android:label="@string/title_activity_estabelecimento_detalhes" >
-
         </activity>
         <activity
             android:name=".activity.InspecaoActivity"
             android:label="@string/title_activity_vistoria" >
-
+        </activity>
+        <activity
+            android:name=".activity.VistoriasActivity"
+            android:label="@string/title_activity_vistorias" >
         </activity>
     </application>
 
