--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'com.shamanland:fab:0.0.8'
 
 
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
