--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,10 @@
             android:name=".activity.VistoriasActivity"
             android:label="@string/title_activity_vistorias" >
         </activity>
+        <activity
+            android:name=".activity.HistoricoVistoriasActivity"
+            android:label="@string/title_activity_vistorias" >
+        </activity>
 
         <receiver android:name=".broadcastreceiver.NetworkChangeReceiver"
             android:exported="true"
@@ -65,6 +69,11 @@
             </intent-filter>
 
         </service>
+        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
