--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:label="@string/title_activity_vistorias" >
         </activity>
         <activity
-            android:name=".activity.HistoricoVistoriasActivity"
+            android:name=".activity.DadosVistoriaActivity"
             android:label="@string/title_activity_vistorias" >
         </activity>
 
